--- a/menu.html
+++ b/menu.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Biryani Qissa</title>
+      <meta http-equiv = "refresh" content = "0; url = https://drive.google.com/file/d/1fok4BOHCOUmJ74ORERNEllulFrLNnoix/view" />
+   </head>
+   <body>
+      <p>Biryani Qissa Menu!</p>
+   </body>
+</html>
